--- a/Comunidades.ipynb
+++ b/Comunidades.ipynb
@@ -29,9 +29,9 @@
         "import numpy as np\n",
         "\n",
         "# The API endpoint\n",
-        "idToken = 'QEypd2Ve8B9HJqlXZVXAy3W'\n",
-        "accept = 'application/json'\n",
-        "url = \"https://mmg.boreal-is.com/api/v2/mmglasbambas/analytics/widgets/1410\"\n",
+        "idToken = '",
+        "accept = '",
+        "url = \"",
         "params_aux = {'offset': 0,'limit': 1000}\n",
         "headers = { 'api_key': idToken,'accept': accept }\n",
         "# A GET request to the API\n",
